concord_macros/tests/v5/dsl/fail/fail_custom_auth.stderr
error: custom auth credentials are not supported in v5 yet; implement a CredentialProvider plus bearer/header/query/basic/certificate placement instead
  --> tests/v5/dsl/fail/fail_custom_auth.rs:10:31
   |
10 |         credential c = custom<CustomProvider>(CustomProvider)
   |                               ^^^^^^^^^^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/v5/dsl/fail/fail_custom_auth.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
